--- a/index9.html
+++ b/index9.html
@@ -9,7 +9,7 @@
 <body>
     <map name="karta">
         <area shape="rect" coords="380,539,460,600"
-        href="Usadba/izba1.jpg" alt="Божница" title="Божница"> 
+        href="Usadba/izba1.jpg"> 
     </map>
     <img src="Usadba/bozhnica_00.jpg" usemap="#karta" border=" ">
 </body>
