--- a/index10.html
+++ b/index10.html
@@ -9,7 +9,7 @@
 <body>
     <map name="karta">
         <area shape="rect" coords="380,539,460,600"
-        href="Usadba/dvor.jpg" alt="Изба" title="Изба"> 
+        href="Usadba/dvor.jpg"> 
     </map>
     <img src="Usadba/izba1.jpg" usemap="#karta" border=" ">
     </map>
