--- a/index8.html
+++ b/index8.html
@@ -9,7 +9,7 @@
 <body>
     <map name="karta">
         <area shape="rect" coords="202,101,317,217,"
-        href="Usadba/bozhnica_00.jpg" alt="Божница" title="Божница"> 
+        href="Usadba/bozhnica_00.jpg" alt="Изба" title="Изба"> 
     </map>
     <img src="Usadba/izba1.jpg" usemap="#karta" border=" ">
 </body>
